--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,15 @@
-/* your beautiful css styling goes here! */
 
-/* Note: an asteroid image is included in this repo. 
-Feel free to use it if you like. */
+body {
+  background-color: #336699;
+}
 
+.gameArea {
+  background-color: #CCFFFF;
+  margin-left: auto;
+  margin-right:auto;
+  display: block;
+}
+
+.enemy {
+  fill: red;
+}
