--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,16 @@ body {
   display: block;
 }
 
+.scoreboard {
+  width: 120px;
+  border-color:black;
+  border-style:inset;
+  padding:2px;
+  margin-left: auto;
+  margin-right:auto;
+  margin-bottom:10px;
+}
+
 .enemy {
   fill: red;
 }
